# specte-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
appirition/: Cargo.toml  README.md
appirition/.cargo/: config.toml
appirition/src/: main.rs
ghast/: Cargo.toml
ghast/src/: config.rs  debug.rs  emu_core.rs  keys.rs  lib.rs  main.rs  state.rs  trove.rs  utils.rs
ghast/trove/: README.md
imp/: Cargo.toml  README.md
imp/src/: main.rs
mausoleum/: Cargo.toml  README.md
mausoleum/src/: lib.rs  main.rs
seance/: Cargo.toml  README.md
spirit/: Cargo.toml  README.md
spirit/src/: apu.rs  cpu.rs  decoder.rs  emulator.rs  gameboy.rs  instruction.rs  lib.rs  lookup.rs  ppu.rs  rom.rs  utils.rs
spirit/src/cpu/: cpu_tests.rs  mod.rs
spirit/src/instruction/: arithmetic.rs  bit.rs  bit_shift.rs  control.rs  interrupt.rs  jump.rs  load.rs  mod.rs  prefixed.rs
spirit/src/mbc/: mbc1.rs  mod.rs
spirit/src/mem/: io.rs  mod.rs  vram.rs
spirit/src/mem/io/: mod.rs  timers.rs
spirit/src/mem/mbc/: mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs
spirit/src/mem/oam/: dma.rs
spirit/src/mem/vram/: dma.rs  mod.rs
spirit/tests/: acid.rs  age.rs  blarg.rs  bully.rs  json_cpu.rs  main.rs  mooneye.rs  op_tests.rs  rom_loading.rs  start_up.rs
spirit/tests/data/: acid-cgb-acid2-memory-map.postcard  acid-cgb-acid2-screen.postcard  blarg-cpu-instr-01-special-memory-map.postcard  blarg-cpu-instr-01-special-screen.postcard  blarg-cpu-instr-03-op_sp,hl-screen.postcard  blarg-cpu-instr-04-op_r,imm-screen.postcard  blarg-cpu-instr-05-op_rp-screen.postcard  blarg-cpu-instr-06-ld_r,r-screen.postcard  blarg-cpu-instr-07-jr,jp,call,ret,rst-screen.postcard  blarg-cpu-instr-08-misc_instrs-screen.postcard  blarg-cpu-instr-09-op_r,r-screen.postcard  blarg-cpu-instr-10-bit_ops-screen.postcard  blarg-cpu-instr-11-op_a,(hl)-screen.postcard  json_test_d9.json
spirit/tests/roms/: README.md
spirit/tests/roms/age/m3-bg-bgp/: m3-bg-bgp.gb
spirit/tests/roms/age/m3-bg-lcdc/: m3-bg-lcdc-ds.gb  m3-bg-lcdc-nocgb.gb  m3-bg-lcdc.gb
spirit/tests/roms/age/m3-bg-scx/: m3-bg-scx-ds.gb  m3-bg-scx-nocgb.gb  m3-bg-scx.gb
spirit/tests/roms/age/oam/: oam-read-cgbE.gb  oam-read-dmgC-cgbBC.gb  oam-read-ncmBC.gb  oam-read-ncmE.gb  oam-write-cgbBCE.gb  oam-write-dmgC.gb  oam-write-ncmBCE.gb
spirit/tests/roms/age/speed-switch/caution/: spsw-interrupts-cgbBC.gb  spsw-interrupts-cgbBC.map  spsw-interrupts-cgbBC.sym  spsw-interrupts-cgbE.gb  spsw-interrupts-cgbE.map  spsw-interrupts-cgbE.sym
spirit/tests/roms/age/vram/: vram-read-cgbBCE.gb  vram-read-dmgC.gb  vram-read-ncmBCE.gb
spirit/tests/snapshots/: acid__acid-cgb-acid2-screen.snap  blarg__blarg-cpu-instrs-01-special-screen.snap
src/: cpu.rs  instruction.rs  main.rs  rom.rs
tombstone/: Cargo.toml  README.md
tombstone/src/: command.rs  config.rs  display_windows.rs  gui.rs  main.rs  pc_state.rs  state.rs  tmp  window.rs
tombstone/src/cli/: commands.rs  history.rs  mod.rs
tombstone/src/repl/: commands.rs  history.rs  mod.rs
