[package]
name = "ghast"
version = "0.1.0"
edition = "2021"

[lib]
name = "ghast"
path = "src/lib.rs"

[[bin]]
name = "ghast"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
homedir = "0.3.4"
iced = { version = "0.13.1", features = ["advanced", "canvas", "image", "tokio"] }
itertools = "0.13.0"
png = "0.17.14"
postcard = { version = "1.1.1", features = ["alloc"] }
serde = { version = "1.0.219", features = ["derive"] }
spirit = { path = "../spirit" }
time = { version = "0.3.36", features = ["local-offset"] }
toml = "0.8.23"
tracing-subscriber = "0.3.18"
