[package]
name = "ghast"
version = "0.1.0"
edition = "2024"

[lib]
name = "ghast"
path = "src/lib.rs"

[[bin]]
name = "ghast"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
homedir = "0.3.4"
iced = { version = "0.13.1", features = ["advanced", "canvas", "image", "tokio"] }
itertools = "0.13.0"
png = "0.17.14"
postcard = { version = "1.1.1", features = ["alloc"] }
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
spirit = { path = "../spirit" }
time = { version = "0.3.36", features = ["local-offset"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.8.23"
tracing-subscriber = "0.3.18"
