[package]
name = "mausoleum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
tokio = { version = "1.50.0", features = ["full"] }
# ulid = { version = "1.2.1", features = ["postgres", "serde"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }
