[package]
name = "mausoleum"
version = "0.1.0"
edition = "2024"

[features]
server = ["axum","clap","futures","sqlx","tokio",]

[[bin]]
name = "mausoleum"
required-features = ["server"]

[dependencies]
base64 = { version = "0.22.1" }
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
uuid = { version = "1.23.0", features = ["v4", "serde"] }

axum = { version = "0.8.8", optional = true }
clap = { version = "4.6.0", features = ["derive", "env"], optional = true }
futures = { version = "0.3.32", optional = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"], optional = true }
tokio = { version = "1.50.0", features = ["full"], optional = true }
anyhow = { version = "1.0.102", optional = true }
