[package]
name = "spirit"
version = "0.1.0"
edition = "2024"

[dependencies]
# serde_json = { version = "1.0" }
# hex = { version = "0.4", features = ["serde"] }
derive_more = { version = "1.0", features = ["full"] }
array-concat = "0.5.3"
# once_cell = "1.19"
tracing = "0.1.40"
heapless = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_with = "3.9.0"
chrono = { version = "0.4.38", features = ["serde"] }

[dev-dependencies]
postcard = { version = "1.0.10", features = ["alloc"] }
test-log = "0.2.16"
