[package]
name = "tombstone"
version = "0.1.0"
edition = "2021"

[dependencies]
ghast = { path = "../ghast" }
clap = { version = "4.5.18", features = ["derive"] }
crossterm = "0.28.1"
ratatui = { version = "0.28.1", features = ["all-widgets"] }
spirit = { path = "../spirit" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
untwine = "0.8.0"
tokio = { version = "1.40.0", features = ["full"] }
iced = "0.13.1"
tokio-stream = { version = "0.1.16", features = ["sync"] }
