[package]
name = "tombstone"
version = "0.1.0"
edition = "2024"

[dependencies]
ghast = { path = "../ghast" }
clap = { version = "4.5.18", features = ["derive"] }
crossterm = "0.29.0"
ratatui = { version = "0.28.1", features = ["all-widgets"] }
spirit = { path = "../spirit" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.40.0", features = ["full"] }
iced = "0.13.1"
tokio-stream = { version = "0.1.16", features = ["sync"] }
indexmap = "2.6.0"
heapless = "0.9.1"
sha2 = "0.10.9"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
